--- a/src/components/cardtypes/ArgonautCard/ArgonautCard.css
+++ b/src/components/cardtypes/ArgonautCard/ArgonautCard.css
@@ -1,9 +1,10 @@
-/* argonautbox template */
+/* argonaut template */
 .argonaut {
 	background-color: #EEE;
 	color: black;
 	display: flex;
 	min-height: 200px;
+	text-align: center;
 }
 
 .argonaut-title {
@@ -13,12 +14,6 @@
 	flex: 8;
 	background-color: #000;
 	padding-top: 5px;
-}
-
-.argonaut-card {
-	text-align: center;
-	align-self: flex-end;
-	width: 100%
 }
 
 .argonaut-flavor {
