--- a/src/components/cardtypes/TitanCard/TitanCard.css
+++ b/src/components/cardtypes/TitanCard/TitanCard.css
@@ -1,7 +1,8 @@
-/* Gearbox template */
+/* Gear template */
 .titan {
 	background-color: #DFDBCD;
 	display: flex;
+	flex-direction: row;
 }
 
 .titan-details {
