--- a/src/components/cardtypes/ConditionCard/ConditionCard.css
+++ b/src/components/cardtypes/ConditionCard/ConditionCard.css
@@ -20,7 +20,7 @@
   padding: 5px;
 }
 
-.condition-subtitle {
+.condition-info {
   text-align: center;
   color: white;
   background-color: #ae6511;
