--- a/src/components/cardtypes/GodformCard/GodformCard.css
+++ b/src/components/cardtypes/GodformCard/GodformCard.css
@@ -26,7 +26,7 @@
   margin-bottom: 10px;
 }
 
-.godform-subtitle {
+.godform-info {
   text-align: center;
   color: white;
   background-color: #488791;
