--- a/src/styles/focuscardpage.css
+++ b/src/styles/focuscardpage.css
@@ -7,26 +7,22 @@
 
 .focus-card {
   display: flex;
+  flex-direction: column;
   gap: 30px;
   width: 70vw;
-  justify-content: space-around;
-  align-items: start;
-}
-
-.focus-big {
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.focus-small {
-  flex-direction: row;
+.focus-big {
+  align-items: center;
 }
 
 .focus-card-info-container {
   background-color: rgb(59, 59, 59);
   border-radius: 10px;
   padding: 30px;
-  width: 25vw;
+  width: 70vw;
 }
 
 .focus-card-info-container > div {
@@ -63,4 +59,21 @@
   height: unset;
   aspect-ratio: 1 / 0.5;
   /*aspect-ratio: 8.5 / 5.5;*/
+}
+
+@media (min-width: 820px) {
+
+  .focus-card {
+    justify-content: space-around;
+    align-items: start;
+  }
+
+  .focus-small {
+    flex-direction: row;
+  }
+
+  .focus-card-info-container {
+    width: 25vw;
+  }
+
 }
