--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,31 +3,40 @@
   width: 100vw;
 }
 
+.top-menu {
+  position: relative;
+  flex: 1;
+  width: 100vw;
+}
+
 .layout-nav {
+  position: absolute;
   list-style-type: none;
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.layout-nav > a {
-  flex: 1;
-  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  top: -30px;
+  left: -24px;
+  width: 100%;
 }
 
 .layout-nav ul {
   padding: 0;
-  flex: 6
+  flex: 6;
+  display: flex;
+  flex-direction: column;
+  max-height: 0;
+  overflow: hidden;
+  width: 100%;
 }
 
 .layout-nav li {
   display: inline;
   padding: 6px 15px;
-  font-size: 24px;
+  font-size: 1.5rem;
   border: 1px solid #ffffff00;
 }
 
@@ -36,7 +45,11 @@
   border: 1px solid rgb(59, 59, 59);
 }
 
-.layout-nav a {
+.layout-nav ul a img {
+  display: none;
+}
+
+.layout-nav ul a {
   color:rgba(255, 255, 255, 0.87);
 }
 
@@ -47,10 +60,46 @@
   padding: 20px;
 }
 
-.app-header * {
+.app-header div {
   flex: 1;
 }
 
 .app-header h1 {
   margin: 0;
+}
+
+.menu-button {
+  display: block;
+  background-color: unset;
+}
+
+@media (min-width: 820px) {
+  .menu-button {
+    display: none;
+  }
+
+  .top-menu {
+    position: static;
+  }
+
+  .layout-nav {
+    position: static;
+  }
+
+  .layout-nav ul {
+    flex-direction: unset;
+    max-height: unset;
+    overflow: unset;
+  }
+
+  .layout-nav ul a img {
+    display: block;
+  }
+
+  .layout-nav ul a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
