Feature: Primordial Card - 50%

--- a/src/styles/cardsStyle.css
+++ b/src/styles/cardsStyle.css
@@ -23,6 +23,12 @@
 	min-height: 359.04px;
 }
 
+.full-page {
+  width: 834px;
+	min-height: 359.04px;
+	/*min-height: 718.08px;*/
+}
+
 @media (min-width: 820px) {
 	.tarot.technology {
 		width: 620.16px;
