--- a/src/components/cardtypes/PrimordialCard/PrimordialCard.css
+++ b/src/components/cardtypes/PrimordialCard/PrimordialCard.css
@@ -50,7 +50,7 @@
   margin-top: 15px;
 }
 
-.primordial-level-buttons {
+.primordial-level-button-box {
   display: flex;
   justify-content: center;
 }
@@ -66,6 +66,13 @@
   align-items: center;
 }
 
+.primordial-left-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 .primordial-right {
   flex: 1;
 }
@@ -74,12 +81,16 @@
   display: flex;
   gap: 1rem;
   background-color: #BFBCAB;
+  width: 90%;
+  min-height: 1.4rem;
+  justify-content: center;
 }
 
 .primordial-vp-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0.5rem 0;
 }
 
 .primordial-vp-box {
@@ -91,19 +102,129 @@
   padding: 0.5rem;
 }
 
+.primordial-vp-circle-box {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.primordial-vp-circle {
+  background-color: #0000006d;
+  border: 2px solid white;
+  color: white;
+  border-radius: 50%;
+  font-size: 2rem;
+  line-height: 5.5rem;
+  height: 6rem;
+  aspect-ratio: 1;
+  text-align: center;
+}
+
+.primordial-climb-test {
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  width: 95%;
+  text-align: center;
+  margin: 0.5rem;
+}
+
+.primordial-level-bar {
+  display: flex;
+  background-color: #BFBCAB;
+  padding: 3px;
+}
+
 .primordial-attributes {
   display: flex;
   flex-direction: column;
+  border-right: 1px solid white;
+  padding: 2px 7px;
 }
 
 .primordial-attributes__main {
   display: flex;
-  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.3rem;
+}
+
+.primordial-attributes__main-stat-box div {
+  min-width: 4rem;
+  border-radius: 50px;
+  border: 2px solid white;
+  color: black;
+  background-color: white;
+  padding: 1px 7px;
+  padding-right: 8px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .primordial-attributes__bonus {
   display: flex;
-  gap: 1rem;
+  margin-top: 2px;
+}
+
+.primordial-attributes__bonus-stat-box {
+  border-right: 1px solid white;
+  padding: 0 2px;
+  font-size: 15px;
+  flex: 0 0 auto;
+  min-width: 0;
+}
+
+.primordial-attributes__bonus-stat-placeholder{
+  flex: 1 0 0;
+  min-width: 0;
+  border-right: 1px solid white;
+}
+
+.primordial-section-header {
+  display: inline-block;
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+  font-weight: bold;
+  padding: 0px 4px;
+  font-size: 11px;
+  border-radius: 1px;
+  margin-bottom: 4px;
+  text-transform: uppercase;
+}
+
+.primordial-speed img {
+  filter: brightness(0) saturate(100%) invert(22%) sepia(11%) saturate(3153%) hue-rotate(185deg) brightness(86%) contrast(82%);
+}
+
+.primordial-trait-changes {
+  width: 45%;
+  padding: 2px 7px;
+  box-sizing: border-box;
+}
+
+.primordial-traits {
+  padding: 5px;
+  height: 300px;
+  overflow-y: scroll;
+  margin-right: 2px;
+}
+
+.primordial-traits::-webkit-scrollbar {
+  max-width: 0.7rem;
+}
+
+.primordial-traits::-webkit-scrollbar-thumb {
+  background-color: #DFDBCD;
+  border-radius: 5px;
+  border: 3px solid #BFBCAB;
+  width: 0.5rem;
+}
+
+.primordial-traits::-webkit-scrollbar-track {
+  background-color: #BFBCAB;
+  border: 3px solid #DFDBCD;
+  width: 0.3rem;
 }
 
 /* End primordial template */
