--- a/src/components/cardtypes/NymphCard/NymphCard.css
+++ b/src/components/cardtypes/NymphCard/NymphCard.css
@@ -1,7 +1,7 @@
 /* nymph template */
 
 .nymph {
-  background-color: #DFDBCD;
+  background-color: var(--papyrus);
 }
 
 .nymph p {
@@ -49,7 +49,7 @@
 }
 
 .nymph-text {
-  background-color: #cac7b9;
+  background-color: var(--papyrus-dark);
   border: 1px solid #b7b4a5;
   padding: 6px 10px;
   box-sizing: border-box;
