--- a/src/components/cardtypes/PrimordialCard/PrimordialCard.css
+++ b/src/components/cardtypes/PrimordialCard/PrimordialCard.css
@@ -1,7 +1,7 @@
 /* primordial template */
 
 .primordial {
-  background-color: #DFDBCD;
+  background-color: var(--papyrus);
 }
 
 .primordial p {
@@ -216,7 +216,7 @@
 }
 
 .primordial-traits::-webkit-scrollbar-thumb {
-  background-color: #DFDBCD;
+  background-color: var(--papyrus);
   border-radius: 5px;
   border: 3px solid #BFBCAB;
   width: 0.5rem;
@@ -224,7 +224,7 @@
 
 .primordial-traits::-webkit-scrollbar-track {
   background-color: #BFBCAB;
-  border: 3px solid #DFDBCD;
+  border: 3px solid var(--papyrus);
   width: 0.3rem;
 }
 
