--- a/src/components/cardtypes/TechnologyCards/TechnologyCard.css
+++ b/src/components/cardtypes/TechnologyCards/TechnologyCard.css
@@ -6,7 +6,7 @@
 }
 
 .technology.projectside {
-  background-color: #DFDBCD;
+  background-color: var(--papyrus);
   padding: 10px;
   color: black;
 }
@@ -50,7 +50,7 @@
 }
 
 .technology-project {
-  background-color: #DFDBCD;
+  background-color: var(--papyrus);
   color: black;
   text-align: center;
   margin-top: 10px;
@@ -68,8 +68,8 @@
 }
 
 .technology-flavor {
-  border-top: 1px solid #cac7b9;
-  border-bottom: 1px solid #cac7b9;
+  border-top: 1px solid var(--papyrus-dark);
+  border-bottom: 1px solid var(--papyrus-dark);
   padding: 2px 0;
   margin-bottom: 15px;
   margin-top: 8px;
@@ -87,7 +87,7 @@
 }
 
 .technology-project-box {
-  background-color: #cac7b9;
+  background-color: var(--papyrus-dark);
   width: fit-content;
   min-width: 50%;
   padding: 0 10px;
