--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
+	--papyrus: #DFDBCD;
+	--papyrus-dark: #cac7b9;
 }
 
 a {
