--- a/src/styles/focuscardpage.css
+++ b/src/styles/focuscardpage.css
@@ -2,7 +2,15 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  justify-content: space-between;
+  align-items: center;
+  padding: 2% 5%;
+  border-radius: 5px;
+}
+
+.focus-card-page h1 {
+  background-color: #242424;
+  padding: 2% 5%;
+  border-radius: 5px;
 }
 
 .focus-card {
