--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,6 +66,38 @@ button {
   background-color: #666;
 }
 
+.focus-card-overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 300;
+  display: none;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(137, 137, 137, 0.684);
+  top: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.focus-card-overlay .focus-card-page {
+  width: 70vw;
+  background-color: #242424;
+}
+
+.focus-card-overlay__buttons {
+  position: fixed;
+  top: 2rem;
+  right: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.focus-card-overlay__buttons .invertible {
+  filter: invert(1)
+}
+
 .data-tippy-root {
   z-index: 99999;
 }
