--- a/src/components/cardtypes/MapCard/MapCard.css
+++ b/src/components/cardtypes/MapCard/MapCard.css
@@ -10,15 +10,16 @@
 
 .map-row {
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 1fr 3fr 1fr;
   align-items: center;
 }
 
 .map-bar {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  height: 100%;
 }
 
 .map-corner {
@@ -129,14 +130,28 @@
 
 .middle {
   justify-self: center;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  box-sizing: border-box;
 }
 
 .right {
   justify-self: end;
 }
 
+.left, .right {
+  min-width: 40px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .map-info-container {
   min-width: 10rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .map-info {
@@ -144,6 +159,31 @@
   font-size: 0.8rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
+}
+
+.map-other-features {
+  max-width: 80%;
+  padding: 5%;
+  padding-top: 0;
+  line-height: 12px;
+}
+
+.map-symbol-container {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 15px;
+}
+
+.map-symbol {
+  border-radius: 50%;
+  border: 2px solid black;
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 
 /* End map template */
