--- a/src/styles/focuscardpage.css
+++ b/src/styles/focuscardpage.css
@@ -5,6 +5,11 @@
   align-items: center;
   padding: 2% 5%;
   border-radius: 5px;
+  position: relative;
+}
+
+.focus-card-page > .secret-overlay {
+  z-index: 750;
 }
 
 .focus-card-page h1 {
@@ -16,14 +21,27 @@
 .focus-card {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  width: 70vw;
+  width: 100%;
+  height: 80vh;
   justify-content: center;
   align-items: center;
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
-.focus-big {
-  align-items: center;
+.focus-card::-webkit-scrollbar {
+  display: none;
+}
+
+.focus-card__card-container {
+  transform: scale(1.3); 
+  transform-origin: top center;
+  margin: 30vh 0;
+}
+
+.focus-card-info-container__container {
+  margin-bottom: 10vh;
 }
 
 .focus-card-info-container {
@@ -31,6 +49,7 @@
   border-radius: 10px;
   padding: 30px;
   width: 70vw;
+  position: relative;
 }
 
 .focus-card-info-container > div {
@@ -69,15 +88,36 @@
   /*aspect-ratio: 8.5 / 5.5;*/
 }
 
+.focus-card-secrets-button {
+  z-index: 700;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 30px;
+  padding: 0 0.8rem 0.5rem 0.8rem;
+}
+
+.focus-card-secrets {
+  min-height: 15vh;
+}
+
 @media (min-width: 820px) {
 
   .focus-card {
     justify-content: space-around;
-    align-items: start;
   }
 
   .focus-small {
     flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .focus-card__card-container {
+    margin-top: 0;
+  }
+
+  .focus-small .focus-card__card-container {
+    margin-left: 5%;
   }
 
   .focus-card-info-container {
